# data-science-ai-superpowers

./: .gitignore  2026-04-09-analytics-ai-installer-implementation.md  README.md  pyproject.toml
ds-analysis-plan/: SKILL.md
ds-brainstorming/: SKILL.md
ds-dispatching-parallel-agents/: SKILL.md
ds-executing-plans/: SKILL.md
ds-experiment-design/: SKILL.md
ds-metric-validation/: SKILL.md
ds-notebook-readability/: SKILL.md
ds-notebook-reproducibility/: SKILL.md
ds-receiving-analysis-review/: SKILL.md
ds-requesting-analysis-review/: SKILL.md  analysis-reviewer.md
ds-subagent-driven-analysis/: SKILL.md  analysis-worker-prompt.md  methodology-reviewer-prompt.md  reproducibility-reviewer-prompt.md
ds-systematic-debugging/: SKILL.md  condition-based-waiting.md  defense-in-depth.md  root-cause-tracing.md
ds-using-superpowers/: SKILL.md
ds-verification-before-completion/: SKILL.md
src/analytics_ai_installer/: bundles.py  cli.py
templates/: AGENTS.analytics.md  CLAUDE.analytics.md
tests/: test_analytics_ai_installer.py
