[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-ai-installer"
version = "0.1.0"
description = "Bundle installer for analytics AI skills via Skilz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
analytics-ai-installer = "analytics_ai_installer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
